--- a/Flu_Sequence_Detector.ipynb
+++ b/Flu_Sequence_Detector.ipynb
@@ -837,15 +837,15 @@
           "base_uri": "https://localhost:8080/",
           "height": 319
         },
-        "outputId": "52990d69-33a7-473a-fce0-c09e21a118df"
+        "outputId": "b3fab7ee-aeab-4650-9f70-35f9e495e4d8"
       },
       "source": [
         "from keras.models import Sequential\n",
-        "from keras.layers import Dense, Dropout, LSTM\n",
+        "from keras.layers import Dense, Dropout, LSTM, Embedding\n",
         "\n",
         "model = Sequential()\n",
         "\n",
-        "model.add(LSTM(10, input_shape=(5,3), return_sequences=True))\n",
+        "model.add(LSTM(units=10, activation='relu', input_shape=(5,3)))\n",
         "model.add(Dropout(0.2))\n",
         "\n",
         "model.add(Dense(20, activation='relu'))\n",
@@ -857,24 +857,24 @@
         "\n",
         "model.summary()"
       ],
-      "execution_count": 101,
+      "execution_count": 115,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential_9\"\n",
+            "Model: \"sequential_11\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "lstm_8 (LSTM)                (None, 5, 10)             560       \n",
+            "lstm_9 (LSTM)                (None, 10)                560       \n",
             "_________________________________________________________________\n",
-            "dropout_13 (Dropout)         (None, 5, 10)             0         \n",
+            "dropout_15 (Dropout)         (None, 10)                0         \n",
             "_________________________________________________________________\n",
-            "dense_16 (Dense)             (None, 5, 20)             220       \n",
+            "dense_18 (Dense)             (None, 20)                220       \n",
             "_________________________________________________________________\n",
-            "dropout_14 (Dropout)         (None, 5, 20)             0         \n",
+            "dropout_16 (Dropout)         (None, 20)                0         \n",
             "_________________________________________________________________\n",
-            "dense_17 (Dense)             (None, 5, 10)             210       \n",
+            "dense_19 (Dense)             (None, 10)                210       \n",
             "=================================================================\n",
             "Total params: 990\n",
             "Trainable params: 990\n",
@@ -892,9 +892,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 337
+          "height": 134
         },
-        "outputId": "4b4c51ae-e8ab-4412-befe-3cda6394f602"
+        "outputId": "8cecbb2d-26ea-4dae-ea38-e4563944f910"
       },
       "source": [
         "model.compile(\n",
@@ -903,25 +903,35 @@
         "    metrics=['accuracy'],\n",
         ")\n",
         "\n",
-        "model.fit(x_train_lstm[0:x_train_lstm.shape[0]-5],\n",
-        "          x_train_lstm[5:],\n",
+        "model.fit(x_train_lstm[0:],\n",
+        "          just[5:],\n",
         "          epochs=3)"
       ],
-      "execution_count": 103,
+      "execution_count": 122,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-103-d83a176e404f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m model.fit(x_train_lstm[0:x_train_lstm.shape[0]-5],\n\u001b[1;32m      8\u001b[0m           \u001b[0mx_train_lstm\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m           epochs=3)\n\u001b[0m",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/engine/training.py\u001b[0m in \u001b[0;36mfit\u001b[0;34m(self, x, y, batch_size, epochs, verbose, callbacks, validation_split, validation_data, shuffle, class_weight, sample_weight, initial_epoch, steps_per_epoch, validation_steps, validation_freq, max_queue_size, workers, use_multiprocessing, **kwargs)\u001b[0m\n\u001b[1;32m   1152\u001b[0m             \u001b[0msample_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msample_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1153\u001b[0m             \u001b[0mclass_weight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mclass_weight\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1154\u001b[0;31m             batch_size=batch_size)\n\u001b[0m\u001b[1;32m   1155\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1156\u001b[0m         \u001b[0;31m# Prepare validation data.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/engine/training.py\u001b[0m in \u001b[0;36m_standardize_user_data\u001b[0;34m(self, x, y, sample_weight, class_weight, check_array_lengths, batch_size)\u001b[0m\n\u001b[1;32m    619\u001b[0m                 \u001b[0mfeed_output_shapes\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    620\u001b[0m                 \u001b[0mcheck_batch_axis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m  \u001b[0;31m# Don't enforce the batch size.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 621\u001b[0;31m                 exception_prefix='target')\n\u001b[0m\u001b[1;32m    622\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    623\u001b[0m             \u001b[0;31m# Generate sample-wise weight values given the `sample_weight` and\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/keras/engine/training_utils.py\u001b[0m in \u001b[0;36mstandardize_input_data\u001b[0;34m(data, names, shapes, check_batch_axis, exception_prefix)\u001b[0m\n\u001b[1;32m    143\u001b[0m                             \u001b[0;34m': expected '\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mnames\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' to have shape '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    144\u001b[0m                             \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0;34m' but got array with shape '\u001b[0m \u001b[0;34m+\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 145\u001b[0;31m                             str(data_shape))\n\u001b[0m\u001b[1;32m    146\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mdata\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    147\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: Error when checking target: expected dense_17 to have shape (5, 1) but got array with shape (5, 3)"
-          ]
+          "output_type": "stream",
+          "text": [
+            "Epoch 1/3\n",
+            "537/537 [==============================] - 0s 897us/step - loss: nan - accuracy: 0.0000e+00\n",
+            "Epoch 2/3\n",
+            "537/537 [==============================] - 0s 305us/step - loss: nan - accuracy: 0.0000e+00\n",
+            "Epoch 3/3\n",
+            "537/537 [==============================] - 0s 316us/step - loss: nan - accuracy: 0.0000e+00\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<keras.callbacks.callbacks.History at 0x7f7c2aef3e80>"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 122
         }
       ]
     },
@@ -932,25 +942,26 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 162
+          "height": 34
         },
-        "outputId": "367d3149-c1f3-4c8e-d173-d0a2f086c804"
+        "outputId": "b06c1c7a-6755-415b-fea6-f2b62747872f"
       },
       "source": [
-        "just = x_train.reshape(542,5,1)"
+        "x_train_lstm[0:].shape"
       ],
-      "execution_count": 104,
+      "execution_count": 120,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-104-e7256f13b132>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mjust\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx_train\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m542\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 1626 into shape (542,5,1)"
-          ]
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(537, 5, 3)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 120
         }
       ]
     },
@@ -961,44 +972,30 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 50
+          "height": 34
         },
-        "outputId": "d947f5a7-92b4-4449-c9dc-97dd9432616f"
+        "outputId": "cb39406e-3a15-4088-db1b-61ac4bc94cad"
       },
       "source": [
         "just = []\n",
-        "for i in range(len(x_train)):\n",
-        "  temp = []\n",
-        "  temp.append(list(x_train[i]))\n",
-        "  temp.append(list(x_train[i]))\n",
-        "  temp.append(list(x_train[i]))\n",
-        "  temp.append(list(x_train[i]))\n",
-        "  temp.append(list(x_train[i]))\n",
-        "  break\n",
-        "print(temp)\n",
-        "temp=np.array(temp)\n",
-        "temp.shape"
+        "for i in x_train:\n",
+        "  just.append(np.sum(i))\n",
+        "just = np.array(just)\n",
+        "just[5:].shape"
       ],
-      "execution_count": 107,
+      "execution_count": 117,
       "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "[[12.798761, 9.502406, -10.419552], [12.798761, 9.502406, -10.419552], [12.798761, 9.502406, -10.419552], [12.798761, 9.502406, -10.419552], [12.798761, 9.502406, -10.419552]]\n"
-          ],
-          "name": "stdout"
-        },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "(5, 3)"
+              "(537,)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 107
+          "execution_count": 117
         }
       ]
     }
